--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,75 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Montserrat', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #8D99AE;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.container {
+  padding: 10px 50px;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
+}
+
+.header > h1{
+  padding: 20px 10px;
+  color: #2B2D42;
+  font-size: 36px;
+}
+
+.input > input {
+  padding: 15px;
+  width: 200px;
+  border-radius: 5px;
+  font-size: 16px;
+  color: #2B2D42;
+}
+
+.input > input::placeholder {
+  color: #8D99AE;
+}
+
+.date > p {
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.weather {
+  margin-top: 20px;
+  border-top: 3px solid #2B2D42;
+}
+.weather > h2 {
+  font-size: 36px;
+  margin: 5px 0px 20px 0px;
+}
+
+.weather > h2 > span {
+  font-size: 22px;
+  color: #2B2D42;
+  padding: 5px;
+  margin-left: 10px;
+}
+
+
+.weatherExtra {
+  display: flex;
+}
+.weatherExtra > div {
+  display: flex;
+  flex-direction: column;
+  padding: 0px 15px;
+  background-color: #2B2D42;
+  color: #8D99AE;
+  width: 150px;
+  margin-right: 15px;
+  border-radius: 10px;
 }
